# CH58x-CMake

./: .gitignore  CMakeEnvs-Windows.txt  CMakeEnvs.txt  CMakeLists.txt  README.md  build.bat  clean.bat
APP/: main.c
src/: main.c
